# wbar

./: .clang_complete  .gitignore  AUTHORS  Bar.cc  Bar.h  CMakeLists.txt  COPYING  CanvasEngine.cc  CanvasEngine.h  CanvasLayouts.cc  CanvasLayouts.h  Command.cc  Command.h  ConfigReader.cc  ConfigReader.h  Dock.cc  Dock.h  EvasWindow.cc  Geometry.cc  Geometry.h  Icon.cc  Icon.h  IconLoader.cc  IconLoader.h  Image.h  ImgWrap.h  LayoutStrategy.cc  LayoutStrategy.h  Main.cc  Makefile  NEWS  OptParser.cc  OptParser.h  OptionParser.cc  OptionParser.h  Options.h  README  SuperBar.cc  SuperBar.h  SuperIcon.cc  (+18 more)
